# tap-yfinance

./: .flake8  .gitignore  LICENSE  README.md  config.json  config_debug.json  lint.sh  meltano.yml  pyproject.toml  state_example.json
tap_yfinance/: __init__.py  client.py  config.py  expected_schema.py  financial_utils.py  helpers.py  price_utils.py  rate_limiter.py  schema.py  session.py  streams.py  tap.py
tests/: __init__.py  test_core.py
